# vibeui

./: .gitignore  Cargo.toml  README.md  TOML.md
examples/: basic.rs  calculator.rs  themes.rs
src/: error.rs  lib.rs
src/app/: app.rs  config.rs  mod.rs
src/components/: button.rs  container.rs  label.rs  layout.rs  mod.rs  text_input.rs
src/events/: event.rs  handler.rs  key.rs  mod.rs
src/platform/: mod.rs  terminal.rs
src/render/: buffer.rs  context.rs  mod.rs  renderer.rs
src/style/: color.rs  mod.rs  style.rs  theme.rs
